update: use metadata graphql client instead of http client to retrieve tags and properties