@@ -21,9 +21,12 @@
 package eu.openanalytics.phaedra.plateservice.service;
 
 import eu.openanalytics.phaedra.metadataservice.client.MetadataServiceClient;
+import eu.openanalytics.phaedra.metadataservice.client.MetadataServiceGraphQlClient;
+import eu.openanalytics.phaedra.metadataservice.dto.MetadataDTO;
 import eu.openanalytics.phaedra.metadataservice.dto.PropertyDTO;
 import eu.openanalytics.phaedra.metadataservice.dto.TagDTO;
 import eu.openanalytics.phaedra.metadataservice.enumeration.ObjectClass;
+import eu.openanalytics.phaedra.plateservice.dto.ExperimentDTO;
 import eu.openanalytics.phaedra.plateservice.dto.ProjectDTO;
 import eu.openanalytics.phaedra.plateservice.enumeration.ProjectAccessLevel;
 import eu.openanalytics.phaedra.plateservice.model.Project;
@@ -31,7 +34,9 @@ import eu.openanalytics.phaedra.plateservice.repository.ProjectRepository;
 import eu.openanalytics.phaedra.util.auth.IAuthorizationService;
 import java.util.ArrayList;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import org.apache.commons.collections4.CollectionUtils;
@@ -49,18 +54,22 @@ public class ProjectService {
 	private final ProjectAccessService projectAccessService;
 	private final IAuthorizationService authService;
 
-	private final MetadataServiceClient metadataServiceClient;
+	private final MetadataServiceGraphQlClient metadataServiceGraphQlClient;
 
 
-	public ProjectService(ProjectRepository projectRepository, ExperimentService experimentService,
-						  ProjectAccessService projectAccessService, IAuthorizationService authService, MetadataServiceClient metadataServiceClient) {
+	public ProjectService(
+			ProjectRepository projectRepository,
+			ExperimentService experimentService,
+			ProjectAccessService projectAccessService,
+			IAuthorizationService authService,
+      MetadataServiceGraphQlClient metadataServiceGraphQlClient) {
 
 		this.projectRepository = projectRepository;
 		this.experimentService = experimentService;
 		this.projectAccessService = projectAccessService;
 		this.authService = authService;
-		this.metadataServiceClient = metadataServiceClient;
-	}
+    this.metadataServiceGraphQlClient = metadataServiceGraphQlClient;
+  }
 
 	public ProjectDTO createProject(ProjectDTO projectDTO) {
 		projectAccessService.checkCanCreateProjects();
@@ -93,17 +102,21 @@ public class ProjectService {
 	}
 
 	public List<ProjectDTO> getProjects(List<Long> projectIds) {
-		List<Project> result = new ArrayList<>();
+		List<Project> projects = new ArrayList<>();
 		if (CollectionUtils.isEmpty(projectIds)) {
-			result.addAll((List<Project>) projectRepository.findAll());
+			projects.addAll((List<Project>) projectRepository.findAll());
 		} else {
-			result.addAll((List<Project>) projectRepository.findAllById(projectIds));
+			projects.addAll((List<Project>) projectRepository.findAllById(projectIds));
 		}
-		return result.stream()
+
+		List<ProjectDTO> projectDTOs = projects.stream()
 				.filter(p -> projectAccessService.hasAccessLevel(p.getId(), ProjectAccessLevel.Read))
 				.map(this::mapToProjectDTO)
-				.map(this::withMetadata)
 				.toList();
+
+		enrichWithMetadata(projectDTOs);
+
+		return projectDTOs;
 	}
 
 	public List<ProjectDTO> getNMostRecentlyUpdatedProjects(int n) {
@@ -128,13 +141,29 @@ public class ProjectService {
 		return projectDTO;
 	}
 
-	private ProjectDTO withMetadata(ProjectDTO projectDTO) {
-		List<TagDTO> tags = metadataServiceClient.getTags(ObjectClass.PROJECT.name(), projectDTO.getId());
-		projectDTO.setTags(tags.stream().map(tagDTO -> tagDTO.getTag()).toList());
+	private void enrichWithMetadata(List<ProjectDTO> projects) {
+		if (CollectionUtils.isNotEmpty(projects)) {
+			// Create a map of project ID to ProjectDTO for quick lookup
+			Map<Long, ProjectDTO> projectMap = new HashMap<>();
+			List<Long> projectIds = new ArrayList<>(projects.size());
+			for (ProjectDTO project : projects) {
+				projectMap.put(project.getId(), project);
+				projectIds.add(project.getId());
+			}
 
-		List<PropertyDTO> properties = metadataServiceClient.getProperties(ObjectClass.PROJECT.name(), projectDTO.getId());
-		projectDTO.setProperties(properties.stream().map(prop -> new eu.openanalytics.phaedra.plateservice.dto.PropertyDTO(prop.getPropertyName(), prop.getPropertyValue())).toList());
-
-		return projectDTO;
+			// Retrieve the metadata using the list of project IDs
+			List<MetadataDTO> experimentsMetadata = metadataServiceGraphQlClient.getMetadata(projectIds, ObjectClass.PROJECT);
+			for (MetadataDTO metadata : experimentsMetadata) {
+				ProjectDTO project = projectMap.get(metadata.getObjectId());
+				if (project != null) {
+					project.setTags(metadata.getTags().stream().map(TagDTO::getTag).collect(Collectors.toList()));
+					List<eu.openanalytics.phaedra.plateservice.dto.PropertyDTO> propertyDTOs = new ArrayList<>(metadata.getProperties().size());
+					for (eu.openanalytics.phaedra.metadataservice.dto.PropertyDTO property : metadata.getProperties()) {
+						propertyDTOs.add(new eu.openanalytics.phaedra.plateservice.dto.PropertyDTO(property.getPropertyName(), property.getPropertyValue()));
+					}
+					project.setProperties(propertyDTOs);
+				}
+			}
+		}
 	}
 }
